--- a/frontend/allpack/iriza/iriza.html
+++ b/frontend/allpack/iriza/iriza.html
@@ -3,54 +3,50 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/frontend/css/footer.css">
-    <link rel="stylesheet" href="/frontend/css/navbar.css">
-    <title>Event</title>
-    <link
-        href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-        rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-        crossorigin="anonymous"
-    />
-    <!-- FontAwesome for icons -->
+    <title>Event Gallery</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/frontend/css/footer.css">
+    <link rel="stylesheet" href="/frontend/css/navbar.css">   
     <style>
-        /* Gallery Image Styles */
-        .gallery-item {
-            position: relative;
+        /* Card Styles */
+        .card {
+            border: none;
+            border-radius: 15px;
             overflow: hidden;
-            border-radius: 10px;
-        }
-
-        .gallery-item img {
-            width: 100%;
-            height: auto;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s ease;
         }
 
-        .gallery-item:hover img {
+        .card:hover {
+            transform: scale(1.05);
+        }
+
+        .card-img-top {
+            object-fit: cover;
+            height: 200px;
+            transition: transform 0.3s ease;
+        }
+
+        .card-img-top:hover {
             transform: scale(1.1);
         }
 
-        .gallery-item .overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: rgba(0, 0, 0, 0.4);
-            color: white;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            opacity: 0;
-            transition: opacity 0.3s ease;
-            border-radius: 10px;
+        .card-body {
+            padding: 20px;
         }
 
-        .gallery-item:hover .overlay {
-            opacity: 1;
+        .card-title {
+            font-size: 1.5rem;
+            font-weight: bold;
         }
+
+        .card-text {
+            font-size: 1rem;
+            color: #555;
+        }
+
+        
     </style>
 </head>
 <body>
@@ -58,163 +54,141 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand logo-margin" href="#">Logo</a>
-            <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-            >
+            <a class="navbar-brand" href="#">Logo</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/frontend/home_packages/home.htm">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="about.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">Service</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="/frontend/home_packages/index.html">Packages</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="/frontend/supliers/suply.html">Suppliers</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#">Booking</a>
-                    </li>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Packages</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Suppliers</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Booking</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <!-- Gallery Section -->
+    <!-- Card Section -->
     <div class="container my-5">
-        <h2 class="text-center mb-4">Waiter Services at Weddings</h2>
+        <h2 class="text-center mb-5">Event Services in Action</h2>
         <div class="row row-cols-1 row-cols-md-3 g-4">
-            <!-- Gallery Item 1 -->
+            <!-- Card 1 -->
             <div class="col">
-                <div class="gallery-item">
-                    <img src="/frontend/allpack/iriza/irizadata/iriza1.jpg" alt="Waiter Service" class="img-fluid">
-                    <div class="overlay">
-                        <p>Professional Waiter Service</p>
+                <div class="card">
+                    <img src="/frontend/allpack/iriza/irizadata/iriza0.jpg" class="card-img-top" alt="Professional Waiter Service">
+                    <div class="card-body">
+                        <h5 class="card-title">Professional Waiter Service</h5>
+                        <p class="card-text">Our team offers exceptional waiter services, ensuring every guest is well-attended during your event.</p>
                     </div>
                 </div>
             </div>
-            <!-- Gallery Item 2 -->
+            <!-- Card 2 -->
             <div class="col">
-                <div class="gallery-item">
-                    <img src="/frontend/allpack/iriza/irizadata/iriza10.jpg" alt="Waiter Service" class="img-fluid">
-                    <div class="overlay">
-                        <p>Serving Guests with Style</p>
+                <div class="card">
+                    <img src="/frontend/allpack/iriza/irizadata/iriza10.jpg" class="card-img-top" alt="Serving Guests with Style">
+                    <div class="card-body">
+                        <h5 class="card-title">Serving Guests with Style</h5>
+                        <p class="card-text">Elegance is key, and we ensure every service is delivered with style and professionalism.</p>
                     </div>
                 </div>
             </div>
-            <!-- Gallery Item 3 -->
+            <!-- Card 3 -->
             <div class="col">
-                <div class="gallery-item">
-                    <img src="/frontend/allpack/iriza/irizadata/iriza11.jpg" alt="Waiter Service" class="img-fluid">
-                    <div class="overlay">
-                        <p>Exquisite Service at Every Event</p>
+                <div class="card">
+                    <img src="/frontend/allpack/iriza/irizadata/iriza11.jpg" class="card-img-top" alt="Exquisite Service at Every Event">
+                    <div class="card-body">
+                        <h5 class="card-title">Exquisite Service at Every Event</h5>
+                        <p class="card-text">From weddings to corporate gatherings, we provide unmatched service that leaves a lasting impression.</p>
                     </div>
                 </div>
             </div>
-            <!-- Gallery Item 4 -->
+            <!-- Card 4 -->
             <div class="col">
-                <div class="gallery-item">
-                    <img src="/frontend/allpack/iriza/irizadata/iriza12.jpg" alt="Waiter Service" class="img-fluid">
-                    <div class="overlay">
-                        <p>Elegant Presentation</p>
+                <div class="card">
+                    <img src="/frontend/allpack/iriza/irizadata/iriza12.jpg" class="card-img-top" alt="Elegant Presentation">
+                    <div class="card-body">
+                        <h5 class="card-title">Elegant Presentation</h5>
+                        <p class="card-text">Our team ensures that every presentation is elegant, stylish, and perfect for your special occasion.</p>
                     </div>
                 </div>
             </div>
-            <!-- Gallery Item 5 -->
+            <!-- Card 5 -->
             <div class="col">
-                <div class="gallery-item">
-                    <img src="/frontend/allpack/iriza/irizadata/iriza13.jpg" alt="Waiter Service" class="img-fluid">
-                    <div class="overlay">
-                        <p>Impeccable Attention to Detail</p>
+                <div class="card">
+                    <img src="/frontend/allpack/iriza/irizadata/iriza13.jpg" class="card-img-top" alt="Impeccable Attention to Detail">
+                    <div class="card-body">
+                        <h5 class="card-title">Impeccable Attention to Detail</h5>
+                        <p class="card-text">We believe in paying attention to the smallest details, ensuring everything is perfect for your event.</p>
                     </div>
                 </div>
             </div>
-            <!-- Gallery Item 6 -->
+            <!-- Card 6 -->
             <div class="col">
-                <div class="gallery-item">
-                    <img src="/frontend/allpack/iriza/irizadata/iriza14.jpg" alt="Waiter Service" class="img-fluid">
-                    <div class="overlay">
-                        <p>Providing Exceptional Service</p>
+                <div class="card">
+                    <img src="/frontend/allpack/iriza/irizadata/iriza14.jpg" class="card-img-top" alt="Providing Exceptional Service">
+                    <div class="card-body">
+                        <h5 class="card-title">Providing Exceptional Service</h5>
+                        <p class="card-text">We pride ourselves on offering exceptional service that exceeds expectations at every event.</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <!-- Footer -->
-    <footer class="bg-dark text-light py-4 footer-animated">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <h5>About Us</h5>
-                    <p class="footer-content">We are a dedicated team of event planners, committed to creating unforgettable experiences. From weddings to corporate events, we handle every detail with care and expertise.</p>
-                </div>
-                <div class="col-md-4">
-                    <h5>Quick Links</h5>
-                    <ul class="list-unstyled footer-content">
-                        <li><a href="home.htm" class="text-light">Home</a></li>
-                        <li><a href="#" class="text-light">About</a></li>
-                        <li><a href="#" class="text-light">Services</a></li>
-                        <li><a href="index.html" class="text-light">Packages</a></li>
-                        <li><a href="#" class="text-light">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="col-md-4">
-                    <h5>Contact Us</h5>
-                    <p class="footer-content">Email: info@eventplanner.com</p>
-                    <p class="footer-content">Phone: +250785300707</p>
-                    <p class="footer-content">Address: 123 Event St, City, Country</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col text-center mt-4">
-                    <ul class="list-inline footer-content">
-                        <li class="list-inline-item">
-                            <a href="#" class="text-light social-icon"><i class="fab fa-facebook"></i></a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="#" class="text-light social-icon"><i class="fab fa-twitter"></i></a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="https://www.instagram.com/muyenzi_jacques/" class="text-light social-icon"><i class="fab fa-instagram"></i></a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col text-center mt-3">
-                    <p>&copy; 2024 Event Planner. All rights reserved.</p>
-                </div>
-            </div>
+   <!-- Footer -->
+<!-- Footer -->
+<footer class="bg-dark text-light py-4 footer-animated">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <h5>About Us</h5>
+          <p class="footer-content">We are a dedicated team of event planners, committed to creating unforgettable experiences. From weddings to corporate events, we handle every detail with care and expertise.</p>
         </div>
-    </footer>
+        <div class="col-md-4">
+          <h5>Quick Links</h5>
+          <ul class="list-unstyled footer-content">
+            <li><a href="home.htm" class="text-light">Home</a></li>
+            <li><a href="#" class="text-light">About</a></li>
+            <li><a href="#" class="text-light">Services</a></li>
+            <li><a href="index.html" class="text-light">Packages</a></li>
+            <li><a href="#" class="text-light">Contact</a></li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <h5>Contact Us</h5>
+          <p class="footer-content">Email: info@eventplanner.com</p>
+          <p class="footer-content">Phone: +250785300707</p>
+          <p class="footer-content">Address: 123 Event St, City, Country</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col text-center mt-4">
+          <ul class="list-inline footer-content">
+            <li class="list-inline-item">
+              <a href="#" class="text-light social-icon"><i class="fab fa-facebook"></i></a>
+            </li>
+            <li class="list-inline-item">
+              <a href="#" class="text-light social-icon"><i class="fab fa-twitter"></i></a>
+            </li>
+            <li class="list-inline-item">
+              <a href="https://www.instagram.com/muyenzi_jacques/" class="text-light social-icon"><i class="fab fa-instagram"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col text-center mt-3">
+          <p>&copy; 2024 Event Planner. All rights reserved.</p>
+        </div>
+      </div>
+    </div>
+  </footer>
+    
 
-    <!-- Bootstrap JS -->
-    <script
-        src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
-        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
-        crossorigin="anonymous"
-    ></script>
-    <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
-        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
-        crossorigin="anonymous"
-    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
