--- a/frontend/test.html
+++ b/frontend/test.html
@@ -66,7 +66,9 @@
             <!-- Slide 1 -->
             <div class="swiper-slide">
                 <div class="card">
+                    <a href="/frontend/allpack/venues/venuesdata/c1.jpg">
                     <img src="/frontend/allpack/venues/venuesdata/c1.jpg" alt="Wedding Decor 1" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
+                </a>
                     <div class="card-body">
                         <h5 class="card-title">Elegant Floral Arrangements</h5>
                         <p class="card-text">Beautiful floral designs for your special day.</p>
@@ -76,7 +78,9 @@
             <!-- Slide 2 -->
             <div class="swiper-slide">
                 <div class="card">
+                    <a href="/frontend/allpack/venues/venuesdata/c2.jpg">
                     <img src="/frontend/allpack/venues/venuesdata/c2.jpg" alt="Wedding Decor 2" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
+                </a>
                     <div class="card-body">
                         <h5 class="card-title">Romantic Candlelight Setup</h5>
                         <p class="card-text">Create a romantic ambiance with candles.</p>
@@ -86,7 +90,9 @@
             <!-- Slide 3 -->
             <div class="swiper-slide">
                 <div class="card">
+                    <a href="/frontend/allpack/venues/venuesdata/c3.jpg">
                     <img src="/frontend/allpack/venues/venuesdata/c3.jpg" alt="Wedding Decor 3" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
+                </a>
                     <div class="card-body">
                         <h5 class="card-title">Luxurious Table Settings</h5>
                         <p class="card-text">Exquisite table setups for a grand celebration.</p>
@@ -96,92 +102,33 @@
             <!-- Slide 4 -->
             <div class="swiper-slide">
                 <div class="card">
+                    <a href="/frontend/allpack/venues/venuesdata/c4.jpg">
                     <img src="/frontend/allpack/venues/venuesdata/c4.jpg" alt="Wedding Decor 4" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
+                    </a>
                     <div class="card-body">
                         <h5 class="card-title">Outdoor Garden Decor</h5>
                         <p class="card-text">Transform your garden into a wedding paradise.</p>
                     </div>
                 </div>
             </div>
-            <!--slide5-->
+            <!-- Slide 5 -->
             <div class="swiper-slide">
                 <div class="card">
-                    <img src="/frontend/allpack/venues/venuesdata/c5.jpg" alt="Wedding Decor 1" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
+                    <a href="/frontend/allpack/venues/venuesdata/c5.jpg">
+                    <img src="/frontend/allpack/venues/venuesdata/c5.jpg" alt="Wedding Decor 5" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
+                    </a>
                     <div class="card-body">
                         <h5 class="card-title">Elegant Floral Arrangements</h5>
                         <p class="card-text">Beautiful floral designs for your special day.</p>
                     </div>
                 </div>
             </div>
-            <!--slide 6-->
+            <!-- Slide 6 -->
             <div class="swiper-slide">
                 <div class="card">
-                    <img src="/frontend/allpack/venues/venuesdata/c6.jpg" alt="Wedding Decor 1" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
-                    <div class="card-body">
-                        <h5 class="card-title">Elegant Floral Arrangements</h5>
-                        <p class="card-text">Beautiful floral designs for your special day.</p>
-                    </div>
-                </div>
-            </div>
-            <!--slide8-->
-            <div class="swiper-slide">
-                <div class="card">
-                    <img src="/frontend/allpack/venues/venuesdata/c8.jpg" alt="Wedding Decor 1" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
-                    <div class="card-body">
-                        <h5 class="card-title">Elegant Floral Arrangements</h5>
-                        <p class="card-text">Beautiful floral designs for your special day.</p>
-                    </div>
-                </div>
-            </div>
-            <!--slide 9-->
-            <div class="swiper-slide">
-                <div class="card">
-                    <img src="/frontend/allpack/venues/venuesdata/c9.jpg" alt="Wedding Decor 1" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
-                    <div class="card-body">
-                        <h5 class="card-title">Elegant Floral Arrangements</h5>
-                        <p class="card-text">Beautiful floral designs for your special day.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="swiper-slide">
-                <div class="card">
-                    <img src="/frontend/allpack/venues/venuesdata/c10.jpg" alt="Wedding Decor 1" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
-                    <div class="card-body">
-                        <h5 class="card-title">Elegant Floral Arrangements</h5>
-                        <p class="card-text">Beautiful floral designs for your special day.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="swiper-slide">
-                <div class="card">
-                    <img src="/frontend/allpack/venues/venuesdata/c11.jpg" alt="Wedding Decor 1" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
-                    <div class="card-body">
-                        <h5 class="card-title">Elegant Floral Arrangements</h5>
-                        <p class="card-text">Beautiful floral designs for your special day.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="swiper-slide">
-                <div class="card">
-                    <img src="/frontend/allpack/venues/venuesdata/c12.jpg" alt="Wedding Decor 1" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
-                    <div class="card-body">
-                        <h5 class="card-title">Elegant Floral Arrangements</h5>
-                        <p class="card-text">Beautiful floral designs for your special day.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="swiper-slide">
-                <div class="card">
-                    <img src="/frontend/allpack/venues/venuesdata/c13.jpg" alt="Wedding Decor 1" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
-                    <div class="card-body">
-                        <h5 class="card-title">Elegant Floral Arrangements</h5>
-                        <p class="card-text">Beautiful floral designs for your special day.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="swiper-slide">
-                <div class="card">
-                    <img src="/frontend/allpack/venues/venuesdata/c14.jpg" alt="Wedding Decor 1" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
+                    <a href="/frontend/allpack/venues/venuesdata/c6.jpg">
+                    <img src="/frontend/allpack/venues/venuesdata/c6.jpg" alt="Wedding Decor 6" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
+                    </a>
                     <div class="card-body">
                         <h5 class="card-title">Elegant Floral Arrangements</h5>
                         <p class="card-text">Beautiful floral designs for your special day.</p>
@@ -219,7 +166,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Custom JS -->
 <script>
-    // Initialize Swiper
+    // Initialize Swiper with Autoplay
     var swiper = new Swiper(".mySwiper", {
         slidesPerView: 1,
         spaceBetween: 20,
@@ -230,6 +177,10 @@
         navigation: {
             nextEl: ".swiper-button-next",
             prevEl: ".swiper-button-prev",
+        },
+        autoplay: {
+            delay: 3000, // Autoplay delay in milliseconds (3 seconds)
+            disableOnInteraction: false, // Continue autoplay even when user interacts with the slider
         },
         breakpoints: {
             640: {
