--- a/test2.html
+++ b/test2.html
@@ -4,198 +4,173 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wedding Venues Gallery</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <title>Wedding Decor Inspiration</title>
+    <!-- Bootstrap 5 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Swiper.js CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+    <!-- Custom CSS -->
     <style>
-        /* General Page Layout */
         body {
             font-family: 'Arial', sans-serif;
             background-color: #f4f4f4;
         }
 
-        /* Gallery Styling */
-        .venue-gallery {
-            padding: 60px 0;
+        .swiper {
+            width: 100%;
+            height: 100%;
         }
 
-        .venue-card {
-            position: relative;
+        .swiper-slide {
+            text-align: center;
+            background: #fff;
+            border-radius: 10px;
             overflow: hidden;
-            border-radius: 15px;
-            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
-            margin-bottom: 30px;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease;
+        }
+
+        .swiper-slide:hover {
+            transform: scale(1.05);
+        }
+
+        .swiper-slide img {
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
             cursor: pointer;
         }
 
-        .venue-card:hover {
-            transform: scale(1.05);
-            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.2);
+        .card-body {
+            padding: 15px;
         }
 
-        .venue-card img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
-
-        .venue-overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: rgba(0, 0, 0, 0.5);
-            opacity: 0;
-            transition: opacity 0.3s ease;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .venue-card:hover .venue-overlay {
-            opacity: 1;
-        }
-
-        .venue-info {
-            color: #fff;
-            text-align: center;
-            font-size: 20px;
+        .card-title {
+            font-size: 1.2rem;
             font-weight: bold;
-            text-transform: uppercase;
+            margin-bottom: 10px;
         }
 
-        /* Responsive Grid */
-        @media (min-width: 1200px) {
-            .venue-card {
-                height: 350px;
-            }
-        }
-
-        @media (max-width: 768px) {
-            .venue-card {
-                height: 250px;
-            }
-        }
-
-        /* Custom Modal Styling */
-        .modal-dialog {
-            max-width: 90%;
+        .card-text {
+            font-size: 0.9rem;
+            color: #666;
         }
 
         .modal-content {
-            background: #fff;
-        }
-
-        .modal-body {
-            padding: 0;
+            background-color: #fff;
+            border-radius: 10px;
         }
 
         .modal-body img {
             width: 100%;
-            height: auto;
-            max-height: 80vh;
-            object-fit: contain;
             border-radius: 10px;
         }
     </style>
 </head>
 
 <body>
-
-    <div class="container-fluid venue-gallery">
-        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
-            <!-- Venue 1 -->
-            <div class="col">
-                <div class="venue-card" data-bs-toggle="modal" data-bs-target="#venueModal" data-bs-image="/frontend/allpack/venues/venuesdata/decor1.jpeg" data-bs-title="Elegant Ballroom">
-                    <img src="/frontend/allpack/venues/venuesdata/decor1.jpeg" alt="Venue 1">
-                    <div class="venue-overlay">
-                        <div class="venue-info">Elegant Ballroom</div>
+    <!-- Slider Section -->
+    <div class="container my-5">
+        <h1 class="text-center mb-4">Wedding Decor Inspiration</h1>
+        <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+                <!-- Slide 1 -->
+                <div class="swiper-slide">
+                    <div class="card">
+                        <a href="/frontend/allpack/decor/decor1.jpg">
+                            <img src="/frontend/allpack/decor/decor1.jpg" alt="Wedding Decor 1" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
+                        </a>
+                        <div class="card-body">
+                            <h5 class="card-title">Elegant Floral Arrangements</h5>
+                            <p class="card-text">Beautiful floral designs for your special day.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Slide 2 -->
+                <div class="swiper-slide">
+                    <div class="card">
+                        <a href="/frontend/allpack/decor/decor2.jpg">
+                            <img src="/frontend/allpack/decor/decor2.jpg" alt="Wedding Decor 2" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
+                        </a>
+                        <div class="card-body">
+                            <h5 class="card-title">Romantic Candlelight Setup</h5>
+                            <p class="card-text">Create a romantic ambiance with candles.</p>
+                        </div>
+                    </div>
+                </div>
+                <!-- Slide 3 -->
+                <div class="swiper-slide">
+                    <div class="card">
+                        <a href="/frontend/allpack/decor/decor3.jpg">
+                            <img src="/frontend/allpack/decor/decor3.jpg" alt="Wedding Decor 3" data-bs-toggle="modal" data-bs-target="#imageModal" onclick="enlargeImage(this)">
+                        </a>
+                        <div class="card-body">
+                            <h5 class="card-title">Luxurious Table Settings</h5>
+                            <p class="card-text">Exquisite table setups for a grand celebration.</p>
+                        </div>
                     </div>
                 </div>
             </div>
-
-            <!-- Venue 2 -->
-            <div class="col">
-                <div class="venue-card" data-bs-toggle="modal" data-bs-target="#venueModal" data-bs-image="/frontend/allpack/venues/venuesdata/decor3.jpg" data-bs-title="Garden Paradise">
-                    <img src="/frontend/allpack/venues/venuesdata/decor3.jpg" alt="Venue 2">
-                    <div class="venue-overlay">
-                        <div class="venue-info">Garden Paradise</div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Venue 3 -->
-            <div class="col">
-                <div class="venue-card" data-bs-toggle="modal" data-bs-target="#venueModal" data-bs-image="/frontend/allpack/venues/venuesdata/decor2.jpg" data-bs-title="Riverside Retreat">
-                    <img src="/frontend/allpack/venues/venuesdata/decor2.jpg" alt="Venue 3">
-                    <div class="venue-overlay">
-                        <div class="venue-info">Riverside Retreat</div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Venue 4 -->
-            <div class="col">
-                <div class="venue-card" data-bs-toggle="modal" data-bs-target="#venueModal" data-bs-image="/frontend/allpack/venues/venuesdata/decor5.jpg" data-bs-title="Charming Chateau">
-                    <img src="/frontend/allpack/venues/venuesdata/decor5.jpg" alt="Venue 4">
-                    <div class="venue-overlay">
-                        <div class="venue-info">Charming Chateau</div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Venue 5 -->
-            <div class="col">
-                <div class="venue-card" data-bs-toggle="modal" data-bs-target="#venueModal" data-bs-image="/frontend/allpack/venues/venuesdata/6.jpg" data-bs-title="Modern Loft">
-                    <img src="/frontend/allpack/venues/venuesdata/6.jpg" alt="Venue 5">
-                    <div class="venue-overlay">
-                        <div class="venue-info">Modern Loft</div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Venue 6 -->
-            <div class="col">
-                <div class="venue-card" data-bs-toggle="modal" data-bs-target="#venueModal" data-bs-image="/frontend/allpack/venues/venuesdata/decor3.jpg" data-bs-title="Rustic Barn">
-                    <img src="/frontend/allpack/venues/venuesdata/decor3.jpg" alt="Venue 6">
-                    <div class="venue-overlay">
-                        <div class="venue-info">Rustic Barn</div>
-                    </div>
-                </div>
-            </div>
+            <!-- Swiper Pagination -->
+            <div class="swiper-pagination"></div>
+            <!-- Swiper Navigation -->
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
         </div>
     </div>
 
-    <!-- Modal for displaying larger image -->
-    <div class="modal fade" id="venueModal" tabindex="-1" aria-labelledby="venueModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
+    <!-- Modal for Enlarged Image -->
+    <div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="venueModalLabel">Venue Title</h5>
+                    <h5 class="modal-title" id="imageModalLabel">Enlarged Image</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body">
-                    <img src="" alt="Venue" id="modalImage" class="img-fluid">
+                <div class="modal-body text-center">
+                    <img id="enlargedImg" src="" class="img-fluid" alt="Enlarged Image">
                 </div>
             </div>
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Swiper.js JS -->
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <!-- Bootstrap 5 JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Custom JS -->
     <script>
-        // Script to update modal with image and title
-        const venueCards = document.querySelectorAll('.venue-card');
-        venueCards.forEach(card => {
-            card.addEventListener('click', () => {
-                const imageUrl = card.getAttribute('data-bs-image');
-                const title = card.getAttribute('data-bs-title');
-                const modalImage = document.getElementById('modalImage');
-                const modalTitle = document.getElementById('venueModalLabel');
-                modalImage.src = imageUrl;
-                modalTitle.textContent = title;
-            });
+        // Initialize Swiper with Autoplay
+        var swiper = new Swiper(".mySwiper", {
+            slidesPerView: 1,
+            spaceBetween: 20,
+            pagination: {
+                el: ".swiper-pagination",
+                clickable: true,
+            },
+            navigation: {
+                nextEl: ".swiper-button-next",
+                prevEl: ".swiper-button-prev",
+            },
+            autoplay: {
+                delay: 3000, 
+                disableOnInteraction: false, 
+            },
+            breakpoints: {
+                640: {
+                    slidesPerView: 2,
+                },
+                1024: {
+                    slidesPerView: 3,
+                },
+            },
         });
+
+        // Function to enlarge image
+        function enlargeImage(img) {
+            var enlargedImg = document.getElementById("enlargedImg");
+            enlargedImg.src = img.src; 
+        }
     </script>
 </body>
 
